# src/wallet/entities/lottery-winner.entity.ts
@@ -1,0 +1,9 @@
+export class LotteryWinner {
+  id?: string;
+  walletCode: number;
+  walletId: string;
+  userName: string;
+  userPhone: string;
+  markedAt: Date;
+  markedBy: string;
+}
